--- a/.github/workflows/check-upstream-and-open-pr.yml
+++ b/.github/workflows/check-upstream-and-open-pr.yml
@@ -2,6 +2,7 @@ name: Check upstream and open PR
 on:
   schedule:
     - cron: '5 5 * * 6'
+  push:
 jobs:
   check-upstream-and-open-pr:
     runs-on: macos-latest
