--- a/.github/workflows/check-upstream-and-open-pr.yml
+++ b/.github/workflows/check-upstream-and-open-pr.yml
@@ -7,6 +7,7 @@ jobs:
   check-upstream-and-open-pr:
     runs-on: macos-latest
     permissions:
+      contents: write
       pull-requests: write
     steps:
       - uses: actions/checkout@v5
